--- a/index.jade
+++ b/index.jade
@@ -86,16 +86,23 @@ body#inicio
 			div.tarjeta
 				div.tarjeta__contenedor
 					p.fechaEvento 7 Jul 2017 
-					img.imagenEvento.imagen-fluida(src="images/2.jpg")
+					
+					div.iconoTipo--tarjeta(title="Teatro")
+						i.icon-info
+
+					//- img.imagenEvento.imagen-fluida(src="images/2.jpg")
+					
 					p.nombreEvento Programa Nacional de Teatro Escolar Veracruz 2017
-					p.descripcionEvento Descripción
+					
+					//- p.descripcionEvento Descripción
+					
 					p.sedeEvento ágora de la Ciudad
+					
 					div.organizadorEvento Instituto Veracruzano de Cultura | IVEC
-
-						
-							
-
-
+					
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+		
 
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 
