--- a/index.jade
+++ b/index.jade
@@ -80,28 +80,141 @@ body#inicio
 
 	//Contenedor Tarjetas
 	div.contenedorTarjetasEventos
+		
+		p.fechaColumnaTarjetas 15 de Septiembre 2017
 		div.columnaTarjetas
-			
 			//Tarjeta
 			div.tarjeta
 				div.tarjeta__contenedor
-					p.fechaEvento 7 Jul 2017 
-					
+					p.fechaEvento 7 Jul 2017
 					div.iconoTipo--tarjeta(title="Teatro")
 						i.icon-info
-
-					//- img.imagenEvento.imagen-fluida(src="images/2.jpg")
-					
+					img.imagenEvento.imagen-fluida(src="images/2.jpg")
 					p.nombreEvento Programa Nacional de Teatro Escolar Veracruz 2017
-					
-					//- p.descripcionEvento Descripción
-					
 					p.sedeEvento ágora de la Ciudad
-					
 					div.organizadorEvento Instituto Veracruzano de Cultura | IVEC
-					
 					div.iconoRedes--tarjeta
 						i.icon-facebook
+			
+			//eventos de relleno
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 4 octubre 2016 &middot; 16:00	
+					div.iconoTipo--tarjeta(title="Visita Guiada")
+					p.nombreEvento Fotografía y Literatura: De la Imagen a la Escritura	
+					p.sedeEvento Ágora de la Ciudad	
+					div.organizadorEvento Ágora de la Ciudad
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 11 octubre 2016 &middot; 16:00	
+					div.iconoTipo--tarjeta(title="Visita Guiada")
+					p.nombreEvento Fotografía y Literatura: De la Imagen a la Escritura	
+					p.sedeEvento Ágora de la Ciudad	
+					div.organizadorEvento Ágora de la Ciudad
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 18 octubre 2016 &middot; 16:00	
+					div.iconoTipo--tarjeta(title="Visita Guiada")
+					p.nombreEvento Fotografía y Literatura: De la Imagen a la Escritura	
+					p.sedeEvento Ágora de la Ciudad	
+					div.organizadorEvento Ágora de la Ciudad
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 5 octubre 2016 &middot; 19:00	
+					div.iconoTipo--tarjeta(title="Concierto")
+					p.nombreEvento Mi Casio, Mi Ciudad	
+					p.sedeEvento Casino Xalapeño	
+					div.organizadorEvento Universidad Veracruzana
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 28 octubre 2016 &middot; 18:00	
+					div.iconoTipo--tarjeta(title="Convocatoria")
+					p.nombreEvento 1er Gran Desfile y Concurso de Catrinas
+					p.sedeEvento Panteón 5 de Febrero - Parque Juárez	
+					div.organizadorEvento H. Ayuntamiento de Xalapa
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 1 octubre 2016 &middot; 12:00	
+					div.iconoTipo--tarjeta(title="Ciclo de Cine")
+					p.nombreEvento Matiné Infantil. Ciclo Hayao Miyasaki
+					p.sedeEvento Galería de Arte Contemporáneo de Xalapa | Auditorio	
+					div.organizadorEvento Galería de Arte Contemporáneo de Xalapa
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 8 octubre 2016 &middot; 12:00	
+					div.iconoTipo--tarjeta(title="Ciclo de Cine")
+					p.nombreEvento Matiné Infantil. Ciclo Hayao Miyasaki
+					p.sedeEvento Galería de Arte Contemporáneo de Xalapa | Auditorio	
+					div.organizadorEvento Galería de Arte Contemporáneo de Xalapa
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 15 octubre 2016 &middot; 12:00	
+					div.iconoTipo--tarjeta(title="Ciclo de Cine")
+					p.nombreEvento Matiné Infantil. Ciclo Hayao Miyasaki
+					p.sedeEvento Galería de Arte Contemporáneo de Xalapa | Auditorio	
+					div.organizadorEvento Galería de Arte Contemporáneo de Xalapa
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 22 octubre 2016 &middot; 12:00	
+					div.iconoTipo--tarjeta(title="Ciclo de Cine")
+					p.nombreEvento Matiné Infantil. Ciclo Hayao Miyasaki
+					p.sedeEvento Galería de Arte Contemporáneo de Xalapa | Auditorio	
+					div.organizadorEvento Galería de Arte Contemporáneo de Xalapa
+					div.iconoRedes--tarjeta
+						i.icon-facebook
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 13 octubre 2016 &middot; 20:30	
+					div.iconoTipo--tarjeta(title="Teatro")
+					p.nombreEvento Muestra Estatal de Teatro Indígena	
+					p.sedeEvento Sala Dagoberto Guillaumin, Teatro del Estado
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 13 octubre 2016 &middot; 19:30	
+					div.iconoTipo--tarjeta(title="Teatro")
+					p.nombreEvento Muestra Estatal de Teatro Indígena	
+					p.sedeEvento Sala Dagoberto Guillaumin, Teatro del Estado
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 14 octubre 2016 &middot; 20:30	
+					div.iconoTipo--tarjeta(title="Teatro")
+					p.nombreEvento Muestra Estatal de Teatro Indígena	
+					p.sedeEvento Sala Dagoberto Guillaumin, Teatro del Estado
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 14 octubre 2016 &middot; 19:30	
+					div.iconoTipo--tarjeta(title="Teatro")
+					p.nombreEvento Muestra Estatal de Teatro Indígena	
+					p.sedeEvento Sala Dagoberto Guillaumin, Teatro del Estado
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 14 octubre 2016 &middot; 19:00	
+					div.iconoTipo--tarjeta(title="Teatro")
+					p.nombreEvento Muestra Estatal de Teatro Indígena	
+					p.sedeEvento Sala Dagoberto Guillaumin, Teatro del Estado
+			div.tarjeta
+				div.tarjeta__contenedor
+					p.fechaEvento 26 septiembre 2016		
+					div.iconoTipo--tarjeta(title="Convocatoria")
+					p.nombreEvento LUNETA	
+					p.sedeEvento Ágora de la Ciudad
+		
 		
 
 	script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
