--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -18,9 +18,9 @@
 			-webkit-column-count:2;
 			-moz-column-count:2;
 			column-count:2;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
 		}
 
 		.tarjeta {
@@ -29,48 +29,63 @@
 		}
 		
 		.tarjeta__contenedor {	
-			grid-template-columns: auto 1fr;
+			grid-template-columns: 90% 10%;
 			grid-template-rows: auto auto auto auto auto auto;
 		}
 		
 		.fechaEvento {
 			grid-column: 1/2;
 			grid-row: 1;
+			margin-left: .5rem;
 		} 
 
 		.iconoTipo--tarjeta {
 			grid-column: 2/3;
 			grid-row: 1;
 			justify-content: flex-end;
+			margin-right: .5rem;
 		}
 
 		.imagenEvento {
 			grid-column: 1/3;
 			grid-row: 2;
 		}
+
 		.nombreEvento {
 			grid-column: 1/3;
 			grid-row: 3;
+			margin: 0 .5rem;
 		}
+
 		.descripcionEvento{
 			grid-column: 1/3;
 			grid-row: 4;
+			margin: 0 .5rem;
 		}
+
 		.sedeEvento {
 			grid-column: 1/3;
 			grid-row: 5;
+			margin: 0 .5rem;
 		}
+
 		.organizadorEvento {
 			grid-column: 1/2;
 			grid-row: 6;
+			margin-left: .5rem;
 		}
 
 		.iconoRedes--tarjeta {
 			grid-column: 2/3;
 			grid-row: 6;
-			justify-content: flex-end;
+			/*justify-content: flex-end;*/
+			margin-right: .5rem;
 		}
 		
+		.plecaEvento {
+			grid-column: 1/3;
+			grid-row: 6;
+		}
 		
 	/* Menu Navegación */
 		.menuNavegacion {
@@ -195,9 +210,9 @@
 			-webkit-column-count:3;
 			-moz-column-count:3;
 			column-count:3;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
 		}
 
 		.tarjeta {
@@ -226,9 +241,9 @@
 			-webkit-column-count:4;
 			-moz-column-count:4;
 			column-count:4;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
 		}
 
 		.tarjeta {
@@ -345,9 +360,9 @@
 			-webkit-column-count:4;
 			-moz-column-count:4;
 			column-count:4;
-			-webkit-column-gap:.5rem;
-			-moz-column-gap:.5rem;
-			column-gap:.5rem;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
 		}
 		
 		.tarjeta {
@@ -369,9 +384,9 @@
 			-webkit-column-count:5;
 			-moz-column-count:5;
 			column-count:5;
-			-webkit-column-gap: .25rem;
-			-moz-column-gap: .25rem;
-			column-gap: .25rem;
+			-webkit-column-gap: 1rem;
+			-moz-column-gap: 1rem;
+			column-gap: 1rem;
 		}
 		
 		.tarjeta {
@@ -380,72 +395,3 @@
 		}
 	
 }
-
-
-
-
-
-
-
-
-
-		/*.tarjeta__contenedor {	
-			grid-template-columns: auto auto 1fr ;
-			grid-template-rows: auto auto auto auto auto;
-		}
-		
-		.imagenEvento {
-			grid-column: 1/2;
-			grid-row: 1/6;
-		}
-
-		.fechaEvento {
-			grid-column: 2/3;
-			grid-row: 1;
-		} 
-	
-		.iconoTipo--tarjeta {
-			grid-column: 3/4;
-			grid-row: 1;
-			justify-content: flex-end;
-		}
-
-		.nombreEvento {
-			grid-column: 2/4;
-			grid-row: 2;
-		}
-
-		.descripcionEvento {
-			grid-column: 2/4;
-			grid-row: 3;
-		}
-
-		.sedeEvento {
-			grid-column: 2/4;
-			grid-row: 4;
-		}
-
-		.organizadorEvento {
-			grid-column: 2/3;
-			grid-row: 5;
-		}
-
-		.iconoRedes--tarjeta {
-			grid-column: 3/4;
-			grid-row: 5;
-			justify-content: flex-end;
-		}
-
-		.fechaEvento, 
-		.iconoTipo--tarjeta,
-		.imagenEvento,
-		.nombreEvento,
-		.descripcionEvento,
-		.sedeEvento,
-		.organizadorEvento,
-		.iconoRedes--tarjeta {
-			display: flex;
-			flex-flow: row;
-			align-content: center;
-			line-height: 1;
-		}*/
