--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -220,11 +220,34 @@
 			width:100%
 		}
 
+		/*Back*/
+		.icono--back  {
+	      color: var(--profundo);
+	      width: 2rem;
+	    }
+
+		.back{
+			display: flex;
+			background-color: var(--blanco);
+			color: var(--oxford);
+			border-radius: 50%;
+			width: 2.5rem;
+			height: 2.5rem;
+			line-height: 1;
+			box-shadow: 0 1px 1px var(--tenueTransparente);   
+			position: fixed;
+			bottom: .5rem; 
+			right: .75rem;
+			z-index: 7;
+			text-align: center;
+		}
+
 		
 }
 
 /*md*//*Cambio pPosición del Menú*/
-@media (min-width:768px)  {
+/*Se cambio de 768px a 810px por Facebook Tabs*/
+@media (min-width:810px)  {
 
 /*////---- P L A T A F O R M A ----\\\\*/
 	.contenedorTarjetasEventos{
@@ -327,29 +350,11 @@
 			transition: right 1s;
 			top: 0;
 		}
-		
-
-	/*Back*/
-		.icono--back  {
-	      color: var(--profundo);
-	      width: 2rem;
-	    }
 
 		.back{
-			display: flex;
-			background-color: var(--blanco);
-			color: var(--oxford);
-			border-radius: 50%;
-			width: 2.5rem;
-			height: 2.5rem;
-			line-height: 1;
-			box-shadow: 0 1px 1px var(--tenueTransparente);   
-			position: fixed;
-			bottom: .5rem; 
 			right: 3.75rem;
-			z-index: 7;
-			text-align: center;
 		}
+		
 }
 
 /*lg*/
