Menu---se dio estilo al menu y los link + iconos

--- a/index.jade
+++ b/index.jade
@@ -59,11 +59,11 @@ body#inicio
 		div.menuNavegacion__home
 			a(href="index.html"): i.icon-info.icono--menu
 
-		p.menuNavegacion--logo ágora
-		i.item__buscar.icon-info
-		i.item__filtrar.icon-info
-		i.item__historial.icon-info
-		i.item__crear.icon-info
+		a.menuNavegacion--logo(href=""): p ágora
+		a.item__buscar(href=""): i.icon-info
+		a.item__filtrar(href=""): i.icon-info
+		a.item__historial(href=""): i.icon-info
+		a.item__crear(href=""): i.icon-info
 
 		div.menuNavegacion__botonMenu
 			a(href="#nav" aria-label="Open Navigation")
@@ -76,24 +76,26 @@ body#inicio
 		
 		div.menuNavExtendida__logo ágora
 
-		div.itemNavExtendida__buscar 
+		a.itemNavExtendida__buscar(href="")
 			i.iconNavExtendida.icon-info
-			a(href="") Buscar
+			p Buscar
 
-		div.itemNavExtendida__filtrar 
+		a.itemNavExtendida__filtrar(href="")
 			i.iconNavExtendida.icon-info
-			a(href="") Filtrar
+			p Filtrar
 
-		div.itemNavExtendida__historial 
+		a.itemNavExtendida__historial(href="")
 			i.iconNavExtendida.icon-info
-			a(href="") Historial
+			p Historial
 
-		div.itemNavExtendida__crear 
+		a.itemNavExtendida__crear(href="")
 			i.iconNavExtendida.icon-info
-			a(href="") Crear
+			p Crear
 
 
-		div.menuNavExtendida--faseBeta Fase Beta
+		div.menuNavExtendida--faseBeta
+			i.iconNavExtendida.icon-info
+			a(href="") Fase Beta
 
 		
 	//Back
