--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -31,17 +31,23 @@
 		.tarjeta__contenedor {	
 			grid-template-columns: 90% 10%;
 			grid-template-rows: auto auto auto auto auto auto;
+		-ms-grid-columns: 90% 10%;
+		-ms-grid-rows: auto auto auto auto auto auto;
 		}
 		
 		.fechaEvento {
 			grid-column: 1/2;
 			grid-row: 1;
+			-ms-grid-row:1/2;
+			-ms-grid-column:2;
 			margin-left: .5rem;
 		} 
 
 		.iconoTipo--tarjeta {
 			grid-column: 2/3;
 			grid-row: 1;
+			-ms-grid-column: 2/3;
+			-ms-grid-row: 1;
 			justify-content: flex-end;
 			margin-right: .5rem;
 		}
@@ -49,42 +55,55 @@
 		.imagenEvento {
 			grid-column: 1/3;
 			grid-row: 2;
+			-ms-grid-column: 1/3;
+			-ms-grid-row: 2;
 		}
 
 		.nombreEvento {
 			grid-column: 1/3;
 			grid-row: 3;
+			-ms-grid-column: 1/3;
+			-ms-grid-row: 3;
 			margin: 0 .5rem;
 		}
 
 		.descripcionEvento{
 			grid-column: 1/3;
 			grid-row: 4;
+			-ms-grid-column: 1/3;
+			-ms-grid-row: 4;
 			margin: 0 .5rem;
 		}
 
 		.sedeEvento {
 			grid-column: 1/3;
 			grid-row: 5;
+			-ms-grid-column: 1/3;
+			-ms-grid-row: 5;
 			margin: 0 .5rem;
 		}
 
 		.organizadorEvento {
 			grid-column: 1/2;
 			grid-row: 6;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 6;
 			margin-left: .5rem;
 		}
 
 		.iconoRedes--tarjeta {
 			grid-column: 2/3;
 			grid-row: 6;
-			/*justify-content: flex-end;*/
+			-ms-grid-column: 2/3;
+			-ms-grid-row: 6;
 			margin-right: .5rem;
 		}
 		
 		.plecaEvento {
 			grid-column: 1/3;
 			grid-row: 6;
+			-ms-grid-column: 1/3;
+			-ms-grid-row: 6;
 		}
 		
 	/* Menu Navegación */
@@ -122,8 +141,8 @@
 	/* Menu Navegación Extendida */
 		.menuNavegacion__Extendida {
 			position: fixed;
-			top: -16rem;
-			padding: 20px;
+			top: -40rem;
+			padding: 0px;
 			width: 100%;
 			height: auto;
 			display: flex;
@@ -139,12 +158,44 @@
 		}
 
 		.nav--activo {
-			top: 2rem;
+			top: 3rem;
 			transition: top 1s;
 		}
+
+		.menuNavExtendida__logo {
+			display: none;
+		}
+
+		.itemNavExtendida__buscar {}
+		
+
+		.itemNavExtendida__filtrar {}
+		
+
+		.itemNavExtendida__historial {}
+		
+
+		.itemNavExtendida__crear {}
+
+
+		.itemNavExtendida__buscar,
+		.itemNavExtendida__filtrar,
+		.itemNavExtendida__historial,
+		.itemNavExtendida__crear,
+		.menuNavExtendida--faseBeta {
+			width: 100%;
+			padding: 1rem;
+			border-top: 1px var(--claro) solid;
+			display: flex;
+			flex-flow: row;
+			justify-content: flex-start;
+			align-items: center;
+		}
+			
 		
 		.iconNavExtendida {
-			visibility: visible;
+			display: initial;
+			padding-right: 1rem;
 		}
 
 	/*BotonMenu*/
@@ -309,14 +360,19 @@
 			border-left: 1px var(--claro) solid;
 			right: 0;
 			display: grid;
+			display: -ms-grid;
 			grid-template-columns: 100%;
 			grid-template-rows: 30% 10% 10% 10% 10% 30%;
+			-ms-grid-columns: 100%;
+			-ms-grid-rows: 30% 10% 10% 10% 10% 30%;
 		}
 		
 
 		.menuNavegacion__home {
 			grid-column: 1/2;
 			grid-row: 1;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 1;
 			display: flex;
 			flex-flow: column;
 			justify-content: flex-start;
@@ -329,24 +385,32 @@
 		.item__buscar {
 			grid-column: 1/2;
 			grid-row: 2;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 2;
 			visibility: hidden;
 		}
 
 		.item__filtrar {
 			grid-column: 1/2;
 			grid-row: 3;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 3;
 			visibility: hidden;
 		}
 
 		.item__historial  {
 			grid-column: 1/2;
 			grid-row: 4;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 4;
 			visibility: hidden;
 		}
 
 		.item__crear  {
 			grid-column: 1/2;
 			grid-row: 5;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 5;
 			visibility: hidden;
 		}
 		
@@ -372,17 +436,6 @@
 			display: none;
 		}
 		
-		/*.menuNavegacion--ul {
-	      list-style: none;
-	      display: initial;
-	      padding: 0;
-
-	    }
-
-	    .menuNavegacion--ul li {
-	      margin: 1rem 0;
-	    }*/
-		
 	    .icono--menu  {
 	      color: var(--profundo);
 	      width: 2rem;
@@ -396,6 +449,8 @@
 	    .menuNavegacion__botonMenu {
 	    	grid-column: 1/2;
 			grid-row: 6;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 6;
 			display: flex;
 			flex-flow: column;
 			justify-content: flex-end;
@@ -413,8 +468,11 @@
 			box-shadow: -3px 0 10px rgba(0,0,0,0.2);
 			transition: right 1.5s;
 			display: grid;
+			display: -ms-grid;
 			grid-template-columns: 100%;
 			grid-template-rows: 30% 10% 10% 10% 10% 30%;
+			-ms-grid-columns: 100%;
+			-ms-grid-rows: 30% 10% 10% 10% 10% 30%;
 			padding: 1rem 0;
 		}
 
@@ -423,30 +481,44 @@
 			transition: right 1s;
 			top: 0;
 		}
-		
+
+		.menuNavExtendida__logo {
+			display: initial;
+		}
+	
 		.menuNavExtendida__logo {
 			grid-column: 1/2;
 			grid-row: 1;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 1;
 		}
 		
 		.itemNavExtendida__buscar {
 			grid-column: 1/2;
-			grid-row: 2;			
+			grid-row: 2;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 2;			
 		}
 
 		.itemNavExtendida__filtrar {
 			grid-column: 1/2;
 			grid-row: 3;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 3;
 		}
 
 		.itemNavExtendida__historial {
 			grid-column: 1/2;
 			grid-row: 4;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 4;
 		}
 
 		.itemNavExtendida__crear {
 			grid-column: 1/2;
 			grid-row: 5;
+			-ms-grid-column: 1/2;
+			-ms-grid-row: 5;
 		}
 
 		.itemNavExtendida__buscar, 
@@ -462,18 +534,21 @@
 		}
 
 		.iconNavExtendida {
-			visibility: hidden;
+			display: none;
 		}
 
 		.menuNavExtendida--faseBeta {
-			grid-column: 1/2;
+			grid-column: 1 / 2;
 			grid-row: 6;
+			-ms-grid-column: 1 / 2;
+			-ms-grid-row: 6;
 			display: flex;
 			flex-flow: column;
 			justify-content: flex-end;
 			align-items: center;
 			width: 100%;
 			height: 100%;
+			padding: 0;
 		}
 
 	/*Back*/
