--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -128,7 +128,8 @@
 		}
 		
 		.menuNavegacion--logo {
-		  display: initial;
+		  	display: initial;
+		  	width: 10%;
 		}
 
 	    .item__buscar,
@@ -149,7 +150,7 @@
 			flex-flow: column;
 			justify-content: space-between;
 			align-items: flex-start;
-			background-color: var(--anaranjado);
+			background-color: var(--blanco);
 			color: var(--blanco); 
 			box-shadow: -3px 0 10px rgba(0,0,0,0.2);
 			text-align: center;
@@ -185,14 +186,18 @@
 		.menuNavExtendida--faseBeta {
 			width: 100%;
 			padding: 1rem;
-			border-top: 1px var(--claro) solid;
 			display: flex;
 			flex-flow: row;
 			justify-content: flex-start;
 			align-items: center;
 		}
 			
-		
+		.linea {
+			background-color: var(--ahuesado);
+    		width: 100%;
+    		height: 1px;
+		}
+
 		.iconNavExtendida {
 			display: initial;
 			padding-right: 1rem;
@@ -379,6 +384,8 @@
 			align-items: center;
 			width: 100%;
 			height: 100%;
+			font-size: 1.5rem;
+			padding-top: .5rem;
 		}
 		
 		
@@ -438,7 +445,7 @@
 		
 	    .icono--menu  {
 	      color: var(--profundo);
-	      width: 2rem;
+	      width: 100%;
 	    }
 
 		.icono--menu:focus, 
@@ -474,6 +481,7 @@
 			-ms-grid-columns: 100%;
 			-ms-grid-rows: 30% 10% 10% 10% 10% 30%;
 			padding: 1rem 0;
+			background-color: var(--anaranjado);
 		}
 
 		.nav--activo {
@@ -484,6 +492,8 @@
 
 		.menuNavExtendida__logo {
 			display: initial;
+			width: 100%;
+			padding: 0 4.5rem;
 		}
 	
 		.menuNavExtendida__logo {
@@ -531,6 +541,7 @@
 			align-content: center;
 			width: 100%;
 			height: 100%;
+			border-top: 0;
 		}
 
 		.iconNavExtendida {
@@ -549,6 +560,7 @@
 			width: 100%;
 			height: 100%;
 			padding: 0;
+			border-top: 0;
 		}
 
 	/*Back*/
