--- a/index.jade
+++ b/index.jade
@@ -106,15 +106,17 @@ body#inicio
 			//Tarjeta
 			div.tarjeta
 				div.tarjeta__contenedor
-					p.fechaEvento 7 Jul 2017
-					div.iconoTipo--tarjeta(title="Teatro")
-						i.icon-info
+					div.header__tarjeta
+						p.fechaEvento 7 Jul 2017
+						div.iconoTipo--tarjeta(title="Teatro")
+							i.icon-info
 					img.imagenEvento.imagen-fluida(src="images/2.jpg")
 					p.nombreEvento Programa Nacional de Teatro Escolar Veracruz 2017
 					p.sedeEvento ágora de la Ciudad
-					div.organizadorEvento Instituto Veracruzano de Cultura | IVEC
-					div.iconoRedes--tarjeta
-						i.icon-facebook
+					div.footer__tarjeta
+						div.organizadorEvento Instituto Veracruzano de Cultura | IVEC
+						div.iconoRedes--tarjeta
+							i.icon-facebook
 			
 			//eventos de relleno
 			div.tarjeta
