--- a/css/agora-mediaQueries.css
+++ b/css/agora-mediaQueries.css
@@ -4,7 +4,8 @@
 
 /*////---- P L A T A F O R M A ----\\\\*/
 	
-	.contenedorTarjetasEventos{
+	/* Tarjetas */	
+		.contenedorTarjetasEventos{
 			width: 100%;
 		    height: 100%;
 		    position: relative;
@@ -24,30 +25,60 @@
 		}
 
 		.tarjeta {
-			display:inline-block;
-			width:100%
+			
 		}
 		
 		.tarjeta__contenedor {	
+
+		}
+		
+		.fechaEvento {	
+			
+		} 
+
+		.iconoTipo--tarjeta {
+				
+		}
+
+		.imagenEvento {
+			
+		}
+
+		.nombreEvento {	
+			
+		}
+
+		.descripcionEvento{	
+			
+		}
+
+		.sedeEvento {	
+
+		}
+
+		.organizadorEvento {	
+			
+		}
+
+		.iconoRedes--tarjeta {
+				
+		}
+
+		/*
+		.tarjeta__contenedor {	
 			grid-template-columns: 90% 10%;
 			grid-template-rows: auto auto auto auto auto auto;
-		-ms-grid-columns: 90% 10%;
-		-ms-grid-rows: auto auto auto auto auto auto;
 		}
 		
 		.fechaEvento {
 			grid-column: 1/2;
 			grid-row: 1;
-			-ms-grid-row:1/2;
-			-ms-grid-column:2;
 			margin-left: .5rem;
 		} 
 
 		.iconoTipo--tarjeta {
 			grid-column: 2/3;
 			grid-row: 1;
-			-ms-grid-column: 2/3;
-			-ms-grid-row: 1;
 			justify-content: flex-end;
 			margin-right: .5rem;
 		}
@@ -55,56 +86,38 @@
 		.imagenEvento {
 			grid-column: 1/3;
 			grid-row: 2;
-			-ms-grid-column: 1/3;
-			-ms-grid-row: 2;
 		}
 
 		.nombreEvento {
 			grid-column: 1/3;
 			grid-row: 3;
-			-ms-grid-column: 1/3;
-			-ms-grid-row: 3;
 			margin: 0 .5rem;
 		}
 
 		.descripcionEvento{
 			grid-column: 1/3;
 			grid-row: 4;
-			-ms-grid-column: 1/3;
-			-ms-grid-row: 4;
 			margin: 0 .5rem;
 		}
 
 		.sedeEvento {
 			grid-column: 1/3;
 			grid-row: 5;
-			-ms-grid-column: 1/3;
-			-ms-grid-row: 5;
 			margin: 0 .5rem;
 		}
 
 		.organizadorEvento {
 			grid-column: 1/2;
 			grid-row: 6;
-			-ms-grid-column: 1/2;
-			-ms-grid-row: 6;
 			margin-left: .5rem;
 		}
 
 		.iconoRedes--tarjeta {
 			grid-column: 2/3;
 			grid-row: 6;
-			-ms-grid-column: 2/3;
-			-ms-grid-row: 6;
 			margin-right: .5rem;
 		}
-		
-		.plecaEvento {
-			grid-column: 1/3;
-			grid-row: 6;
-			-ms-grid-column: 1/3;
-			-ms-grid-row: 6;
-		}
+		*/
 		
 	/* Menu Navegación */
 		.menuNavegacion {
@@ -278,7 +291,6 @@
     		height: 1px;
 		}
 	
-
 	/*Back*/
 	    .back {
 			display: none;
@@ -303,7 +315,7 @@
 			width:100%
 		}
 
-		/*Back*/
+	/*Back*/
 		.icono--back  {
 	      color: var(--profundo);
 	      width: 2rem;
@@ -333,47 +345,40 @@
 @media (min-width:820px)  {
 
 /*////---- P L A T A F O R M A ----\\\\*/
-	.contenedorTarjetasEventos{
-			width: calc(100% - 3rem);
-		    height: 100vh;
-		    position: relative;
-		    margin: 0;
-		    left: 0;
-		    bottom: initial;
-		    padding: 1rem;
-		}
+	
+	/*Tarjetas*/
+		.contenedorTarjetasEventos{
+				width: calc(100% - 3rem);
+			    height: 100vh;
+			    position: relative;
+			    margin: 0;
+			    left: 0;
+			    bottom: initial;
+			    padding: 1rem;
+			}
 
-		.columnaTarjetas {
-			-webkit-column-count:4;
-			-moz-column-count:4;
-			column-count:4;
-			-webkit-column-gap: 1rem;
-			-moz-column-gap: 1rem;
-			column-gap: 1rem;
-		}
+			.columnaTarjetas {
+				-webkit-column-count:4;
+				-moz-column-count:4;
+				column-count:4;
+				-webkit-column-gap: 1rem;
+				-moz-column-gap: 1rem;
+				column-gap: 1rem;
+			}
+			
+			.fechaEvento, 
+			.punto, 
+			.horaEvento {
+				font-size: 70%
+			}
 
-		.tarjeta {
-			display:inline-block;
-			width:100%
-		}
-		
-		.fechaEvento, 
-		.punto, 
-		.horaEvento {
-			display: inline-block;
-			font-size: 70%
-		}
-
-		.sedeEvento {
-			display: block;
-			font-size: 70%;
-		}
-		
-		.organizadorEvento {
-			display: flex;
-			font-size: 70%;
-		}
-
+			.sedeEvento {
+				font-size: 70%;
+			}
+			
+			.organizadorEvento {
+				font-size: 70%;
+			}
 
 	/* Menú Navegación */
 		.menuNavegacion {
